--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,14 @@ volumes:
 services:
   postgres:
     image: binakot/postgresql-postgis-timescaledb:latest
-    container_name: postgres
+    container_name: KZ_POSTGRESQL_POSTGIS
     restart: unless-stopped
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=Kizora@123
     ports:
-      - 5432:5432
+      - 5433:5432
     networks:
       - overlay
     volumes:
@@ -25,12 +25,12 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4:latest
-    container_name: pgadmin
+    container_name: KZ_PGADMIN_POSTGIS
     restart: unless-stopped
     environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_DEFAULT_EMAIL=admin@kizora.com
+      - PGADMIN_DEFAULT_PASSWORD=Kizora@123
     ports:
-      - 5433:80
+      - 8080:80
     networks:
       - overlay
